# stm32-rust-rtic-blink

./: Cargo.toml  Makefile  README.md  justfile  memory.x
src/: consts.rs  lib.rs  types.rs
