[package]
authors = ["Andrey Kartashov <andrey.kartashov@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32_rust_rtic_blink"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.7"
cortex-m-rtic = "1.1.3"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
systick-monotonic = "1.0.0"
fugit = "0.3.6"

[dependencies.stm32f1]
version = "0.15.1"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]
#features = ["rt", "stm32f103", "medium", "stm32-usbd"]

[[bin]]
name = "blink"
test = false
bench = false

[profile.dev]
codegen-units = 8 # better optimizations

# optimize for size ('s' or 'z' would optimize even more)
opt-level = 's'

# enable debugging in dev mode.
debug = true

# link with link time optimization (lto).
# NOTE: setting this to true upsets GDB, there's a bug somewhere
lto = false

[profile.release]

codegen-units = 1 # better optimizations

# optimize for size ('s' or 'z' would optimize even more)
opt-level = 's'

# link with link time optimization (lto).
lto = true

# no debug info
debug = false

# Optimize all the other dependencies
[profile.dev.package."*"]
opt-level = "s"

[profile.release.package."*"]
opt-level = "s"
